# filamentation

./: CMakeLists.txt  config.yml  main.cpp
lib/alglib/: manual.cpp.html
lib/alglib/tests/: test_c.cpp  test_i.cpp
lib/googletest-master/: CMakeLists.txt
lib/googletest-master/googlemock/: CMakeLists.txt
lib/googletest-master/googlemock/scripts/: fuse_gmock_files.py  gmock_doctor.py  upload_gmock.py
lib/googletest-master/googlemock/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_ex_test.cc  gmock_leak_test.py  gmock_leak_test_.cc  gmock_link2_test.cc  gmock_link_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc  gmock_test_utils.py
lib/googletest-master/googletest/: CMakeLists.txt
lib/googletest-master/googletest/cmake/: internal_utils.cmake
lib/googletest-master/googletest/samples/: prime_tables.h  sample1.cc  sample1.h  sample10_unittest.cc  sample1_unittest.cc  sample2.cc  sample2.h  sample2_unittest.cc  sample3-inl.h  sample3_unittest.cc  sample4.cc  sample4.h  sample4_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
processing/: requirements.txt
processing/core/: __init__.py  base_readout.py  functions.py  intensity_rt.py  ionization.py  plasma_rt.py  track.py
processing/core/rt/: base_intensity_rt.py  base_plasma_rt.py  base_rt.py
processing/scripts/: intensity_rt.py  ionization.py  plasma_rt.py  track.py
processing/scripts/analysis/: intensity_rt_flat.py  plasma_rt_flat.py
processing/scripts/intensity_rt/: analysis.py  multimedia.py
processing/scripts/plasma_rt/: analysis.py
processing/test/: diffraction.py  dispersion.py  marburger.py
src/: Logger.cpp  Logger.h  Manager.cpp  Manager.h  MathConstants.cpp  MathConstants.h  Propagator.cpp  Propagator.h  PulsedBeam.cpp  PulsedBeam.h  config_manager.cpp  config_manager.h  functions.cpp  functions.h  logger.cpp  logger.h  m_constants.cpp  m_constants.h  manager.cpp  manager.h  misc_functions.cpp  misc_functions.h  processor.cpp  processor.h  propagator.cpp  propagator.h  pulsed_beam.cpp  pulsed_beam.h
src/equation_terms/: DiffractionExecutor.cpp  DiffractionExecutor.h  base_term.cpp  base_term.h  diffraction_executor.cpp  diffraction_executor.h  fourier_executor.cpp  fourier_executor.h
src/equation_terms/dispersion/: base_dispersion_executor.cpp  base_dispersion_executor.h  dispersion_executor_full.cpp  dispersion_executor_full.h  dispersion_executor_gvd.cpp  dispersion_executor_gvd.h
src/executor/: base_executor.cpp  base_executor.h  linear_executor.cpp  linear_executor.h  nonlinear_executor.cpp  nonlinear_executor.h
src/executor/linear_executor/: linear_executor.cpp  linear_executor.h
src/executor/nonlinear_executor/: nonlinear_executor.cpp  nonlinear_executor.h
src/fft/: fft.cpp  fft.h
src/ionization/: base_ionization.cpp  base_ionization.h
src/ionization/keldysh/: base_keldysh.cpp  base_keldysh.h  original_keldysh.cpp  original_keldysh.h  smoothed_keldysh.cpp  smoothed_keldysh.h
src/logger/: initial_parameters.cpp  initial_parameters_pdf.cpp  initial_parameters_to_pdf.cpp  initial_parameters_to_yml.cpp  initial_parameters_yml.cpp  logger.cpp  logger.h
src/logger/initial_parameters/: initial_parameters_to_pdf.cpp  initial_parameters_to_yml.cpp
src/logger/postprocessor/: postprocessor.cpp  postprocessor.h
src/manager/: config_manager.cpp  config_manager.h  dir_manager.cpp  dir_manager.h
src/manager/config_manager/: config_manager.cpp  config_manager.h
src/manager/dir_manager/: dir_manager.cpp  dir_manager.h
src/medium/: CaF2.cpp  CaF2.h  LiF.cpp  LiF.h  SiO2.cpp  SiO2.h  base_medium.cpp  base_medium.h  medium.cpp  medium.h
src/medium/ionization/: base_ionization.cpp  base_ionization.h
src/medium/material/: base_medium.cpp  base_medium.h
src/medium/materials/: base_medium.cpp  base_medium.h
src/misc/: misc.cpp  misc.h
src/postprocessor/: postprocessor.cpp  postprocessor.h
src/propagator/: propagator.cpp  propagator.h
src/pulsed_beam/: base_pulsed_beam.cpp  base_pulsed_beam.h  gauss.cpp  gauss.h  parameters.cpp  ring.cpp  ring.h  vortex.cpp  vortex.h
src/pulsed_beam/base_pulsed_beam/: base_pulsed_beam.cpp  base_pulsed_beam.h  parameters.cpp
src/pulsed_beam/gauss/: gauss.cpp  gauss.h
src/pulsed_beam/ring/: ring.cpp  ring.h
src/pulsed_beam/vortex/: vortex.cpp  vortex.h
src/saver/: saver.cpp  saver.h
src/saver/initial_parameters/: initial_parameters_to_pdf.cpp  initial_parameters_to_yml.cpp
src/term/: base_term.cpp  base_term.h
src/term/kinetic_equation/: kinetic_equation.cpp  kinetic_equation.h
src/term/linear/: base_linear_term.cpp  base_linear_term.h
src/term/nonlinear/: base_nonlinear_term.cpp  base_nonlinear_term.h
test/diffraction/: config.yml  main.cpp  processor_diffraction.cpp  processor_diffraction.h  test_diffraction.cpp  test_diffraction.h  test_diffraction_config.yml
test/diffraction/postprocessor_diffraction/: postprocessor_diffraction.cpp  postprocessor_diffraction.h
test/dispersion/: base_test_dispersion.cpp  base_test_dispersion.h  main.cpp  processor_dispersion.cpp  processor_dispersion.h  test_dispersion.cpp  test_dispersion_config.yml  test_dispersion_full.cpp  test_dispersion_full.h  test_dispersion_gvd.cpp  test_dispersion_gvd.h
test/dispersion/postprocessor_dispersion/: postprocessor_dispersion.cpp  postprocessor_dispersion.h
test/marburger/: test_marburger.cpp  test_marburger_config.yml
test/plasma/: test_plasma.cpp  test_plasma_config.yml
(+189 files in other folders)
